overflow fix

--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
   box-sizing: border-box;
   margin: auto 0;
   font-family: var(--regular-font);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .hidden {
@@ -395,10 +397,6 @@ body {
 }
 
 @media screen and (max-width: 800px) {
-  .banner {
-    align-items: flex-end;
-  }
-
   .banner-wrapper {
     width: auto;
     border-radius: 10px 10px 0 0;
